# AIReady_graphsuite

./: .gitignore  run.ps1  run.sh
api/: .gitignore  Dockerfile  auth.py  config.py  docker-compose.yml  graphsuite_server.py  gunicorn_config.py  pyproject.toml  run_with_gunicorn.py  tenant_context.py  utils_api.py
api/domain/connect/: __init__.py  value_objects.py
api/routers/: __init__.py  graph_routes.py
api/schemas/: connect_schema.py  dashboard_audit_schema.py  graph_schema.py
api/services/: audit_log.py  aws_clients.py  connect_customer_credentials.py  connect_service.py  connect_settings.py  dashboard_audit_service.py  governance_api_service.py  governance_repository.py  log_sanitizer.py  ontology_api_service.py  ontology_graph_repository.py  ontology_ops_validator.py  remediation_stub_409_env.py  runtime_config.py  tenant_db_resolver.py
api/services/repositories/: __init__.py  audit_writer_repository.py  connect_connections_repository.py  connect_logs_repository.py  dashboard_readiness_snapshot_repository.py
connect/: README.md  pyproject.toml
connect/infra/: app.py  cdk.json  stack.py
connect/scripts/: check_all_logs.py  check_logs.py  delete_test_file.py  init_subscription.py  seed_parameters.py  show_metadata.py  upload_test_file.py  verify_graph_api.py
connect/src/: __init__.py
connect/src/connectors/: __init__.py
connect/src/handlers/: __init__.py  backfill_chat_messages.py  cleanup_connection_artifacts.py  init_subscription.py  pull_file_metadata.py  pull_message_metadata.py  receive_notification.py  renew_access_token.py  renew_subscription.py
connect/src/shared/: config.py  connect_secrets.py  connection_cleanup.py  connection_lookup.py  customer_credentials.py  dynamodb.py  logger.py  ssm.py
connect/tests/: conftest.py  test_delta.py  test_normalizer.py  test_webhook.py
connect/tests/fixtures/: drive_item_deleted.json  drive_item_file.json  notification_payload.json
governance/: .dockerignore  README.md  Tasks.md  pyproject.toml  test.md
governance/docker/: Dockerfile.sensitivity  requirements.sensitivity.txt
governance/infra/: app.py  cdk.json  stack.py
governance/src/handlers/: analyze_exposure.py  batch_scoring.py  detect_sensitivity.py  remediate_finding.py
governance/src/resources/: document_categories.txt
governance/src/services/: content_signal_analyzer.py  document_analysis.py  domain_dictionary.py  embedding_generator.py  entity_integration.py  exposure_vectors.py  finding_manager.py  guard_config.py  guard_matcher.py  ner_pipeline.py  pii_detector.py  policy_evaluator.py  policy_models.py  policy_repository.py  policy_resolver.py  remediation_catalog.py  remediation_graph_client.py  remediation_workflow.py  scoring.py  secret_detector.py  sharing_scope.py  summarizer.py  text_extractor.py
governance/src/shared/: config.py  dynamodb.py  logger.py  metrics.py
governance/tests/: conftest.py
governance/tests/aws/: conftest.py  test_dvt_infrastructure.py  test_dvt_lambda.py  test_e2e_batch_pipeline.py  test_e2e_multi_tenant.py  test_e2e_phase65_analysis_unification.py  test_e2e_realtime_pipeline.py  test_e2e_remediate_finding_graph_execute.py  test_ft_analyze_exposure.py  test_ft_batch_scoring.py  test_ft_detect_sensitivity.py  test_ft_finding_lifecycle.py  test_ft_guard_matching.py  test_ft_phase65_analysis_unification.py  test_ft_remediate_finding_smoke.py  test_ft_scoring_engine.py  test_ft_tenant_alpha_abcd_expected.py  test_ot_observability.py  test_pt_performance.py  test_rt_resilience.py  test_st_security.py
governance/tests/integration/: test_analyze_exposure_e2e.py  test_batch_scoring_e2e.py  test_detect_sensitivity_e2e.py  test_document_analysis_e2e.py  test_pipeline_e2e.py
governance/tests/unit/: test_analyze_exposure.py  test_batch_scoring.py  test_batch_scoring_advanced.py  test_config.py  test_detect_sensitivity.py  test_document_analysis.py  test_domain_dictionary.py  test_dynamodb_helper.py  test_embedding_generator.py  test_entity_integration.py  test_exposure_vectors.py  (+11 more)
ontology/: .gitignore  README.md  Tasks.md  cdk.context.json  cdk.json  pyproject.toml  設計変更.md
ontology/cdk/: app.py  environments.json  requirements.txt
ontology/db/: run_migrations.ps1  run_migrations.py
ontology/scripts/: build_aurora_layer.ps1  build_common_layer.ps1  deploy_env.ps1  seed_ssm_parameters.ps1
ontology/src/: __init__.py
(+178 files in other folders)
