[tool.poetry]
name = "ai-ready-governance"
version = "0.1.0"
description = "AI Ready Governance - Oversharing detection pipeline for generative AI data access risk"
authors = ["GraphSuite Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.34"
tzdata = {version = "^2025.1", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
moto = {version = "^5.0", extras = ["dynamodb", "ssm", "sqs", "s3"]}
pytest-cov = "^5.0"
black = "^24.0"
flake8 = "^7.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "aws: AWS 実環境テスト（--run-aws フラグで有効化）",
    "slow: 長時間実行テスト（2 分超）",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
